--- a/Assets/Modules/Core/SolarSystem.Core.asmdef
+++ b/Assets/Modules/Core/SolarSystem.Core.asmdef
@@ -1,3 +1,13 @@
-﻿{
-	"name": "SolarSystem.Core"
+{
+    "name": "SolarSystem.Core",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
