--- a/Assets/Modules/GamePlay/SolarSystem.GamePlay.asmdef
+++ b/Assets/Modules/GamePlay/SolarSystem.GamePlay.asmdef
@@ -1,3 +1,15 @@
-﻿{
-	"name": "SolarSystem.GamePlay"
+{
+    "name": "SolarSystem.GamePlay",
+    "references": [
+        "GUID:fdb534c072d22a7469fe4b9e5be69c14"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
