--- a/Assets/Modules/UI/SolarSystem.UI.asmdef
+++ b/Assets/Modules/UI/SolarSystem.UI.asmdef
@@ -1,3 +1,16 @@
-﻿{
-	"name": "SolarSystem.UI"
+{
+    "name": "SolarSystem.UI",
+    "references": [
+        "GUID:fdb534c072d22a7469fe4b9e5be69c14",
+        "GUID:8c26edb72a5b44ef39c0bd009ec1322d"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
