--- a/Assets/Modules/GamePlay/SolarSystem.GamePlay.asmdef
+++ b/Assets/Modules/GamePlay/SolarSystem.GamePlay.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "SolarSystem.GamePlay",
     "references": [
-        "GUID:fdb534c072d22a7469fe4b9e5be69c14"
+        "GUID:fdb534c072d22a7469fe4b9e5be69c14",
+        "GUID:91f3cfd56b0764fb4973380790cc548e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
