--- a/Assets/Modules/GamePlay/SolarSystem.GamePlay.asmdef
+++ b/Assets/Modules/GamePlay/SolarSystem.GamePlay.asmdef
@@ -2,6 +2,7 @@
     "name": "SolarSystem.GamePlay",
     "references": [
         "GUID:fdb534c072d22a7469fe4b9e5be69c14",
+        "GUID:8c26edb72a5b44ef39c0bd009ec1322d",
         "GUID:91f3cfd56b0764fb4973380790cc548e"
     ],
     "includePlatforms": [],
