--- a/Assets/Modules/Landing/SolarSystem.Landing.asmdef
+++ b/Assets/Modules/Landing/SolarSystem.Landing.asmdef
@@ -1,9 +1,10 @@
 {
     "name": "SolarSystem.Landing",
+    "rootNamespace": "",
     "references": [
-        "GUID:fdb534c072d22a7469fe4b9e5be69c14",
-        "GUID:8c26edb72a5b44ef39c0bd009ec1322d",
-        "GUID:91f3cfd56b0764fb4973380790cc548e"
+        "SolarSystem.Core",
+        "StansAssets.SceneManagement",
+        "MikeAssets.ModularServiceLocator"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
