Fixed compilation issues for a project

--- a/Assets/Modules/Editor/SolarSystem.Editor.asmdef
+++ b/Assets/Modules/Editor/SolarSystem.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "SolarSystem.Core",
         "MikeAssets.ModularServiceLocator",
-        "StansAssets.SceneManagement"
+        "StansAssets.SceneManagement",
+        "SolarSystem.GamePlay"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
